# portfolio

./: .gitignore  404.html  Procfile  README.md  aboutme.html  app.py  blogs.json  index.html  main.py  puepy-0.4.1-py3-none-any.whl  pyproject.toml  pyscript-app.json  render.yaml  requirements.txt  scripts.js  scripts.ts  tsconfig.json
.github/: 404.html
.github/workflows/: django.yml
bar/: menubar.py
blog/: forms.py  models.py  urls.py  views.py
blog/migrations/: 0001_initial.py  0002_remove_blog_unpublish_alter_blog_content_and_more.py  0003_alter_blogcomment_comment.py  0004_alter_blog_options_alter_blogcomment_options_and_more.py  0005_tagblog_description_alter_blog_tags.py  0006_blog_views.py  0007_blog_main_image.py  0008_tagblog_background_color_tagblog_border_color.py  0009_remove_tagblog_border_color.py  0010_alter_blog_id_alter_blogcomment_id_alter_tagblog_id.py  0011_alter_tagblog_background_color.py
core/: settings.py  urls.py
images/icon/: bow.xcf
static/css/: blog_list.css  blog_page.css  style.css  tutorial.css
static/js/: server.js
staticfiles/css/: animate.css  font.css  footer.css  header.css  individual_tutorial.css  style.css  tutorial_page.css
staticfiles/images/: Untitled-4-1.avif  qq-5-e1626123317338.avif
staticfiles/js/: shake.js
style/: container_1.css  container_2.css  fonts.css  index_2.css  menubar.css
templates/: base.html  landing_page.html  login.html
templates/blog/: all_blog.html  blog_update_view.html  blogs.html  blogtags.html  create_blog.html  create_tag.html  (+2 more)
tutorial/: forms.py  models.py
(+7 files in other folders)
