[tool.poetry]
name = "portfolio"
version = "0.1.0"
description = "This is the project for my portfolio and a project for hosting and writing tutorials and blogs"
authors = ["Fidelugwuowo Dilibe"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
django = "^4.2.4"
pillow = "^10.0.0"
psycopg2 = "^2.9.7"
requests = "^2.31.0"
python-dotenv = "^1.0.0"
django-cockroachdb = "^4.2"
django-ckeditor = "^6.7.0"
crispy-bootstrap4 = "^2022.1"
urllib3 = "^2.0.4"
psycopg2-binary = "^2.9.7"
gunicorn = "^21.2.0"
whitenoise = {extras = ["brotli"], version = "^6.5.0"}


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
